--- a/echarts-show/echarts-start/index.html
+++ b/echarts-show/echarts-start/index.html
@@ -15,14 +15,19 @@
     title: {
         text: 'ECharts 入门示例'
     },
+    // 用户悬停在图标上时的提示框
     tooltip: {},
+    // 图例
     legend: {
         data: ['销量']
     },
+    // 横轴数据
     xAxis: {
         data: ['衬衫', '羊毛衫', '雪纺衫', '裤子', '高跟鞋', '袜子']
     },
     yAxis: {},
+    // 数据集
+    // 柱状图
     series: [
         {
         name: '销量',
