--- a/echarts-show/echarts-start/index.html
+++ b/echarts-show/echarts-start/index.html
@@ -9,11 +9,12 @@
 <body>
     <div id="main" style="width: 600px;height:400px;"></div>
     <script>
+    
     var myChart = echarts.init(document.getElementById('main'));
 // 指定图表的配置项和数据
     var option = {
     title: {
-        text: 'ECharts 入门示例'
+        text: '电商业务分布图'
     },
     // 用户悬停在图标上时的提示框
     tooltip: {},
